# voice-channel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  TROUBLESHOOTING.md
.claude-plugin/: marketplace.json
.claude/skills/release/: SKILL.md
.github/badges/: clones-history.json  clones.json  views-history.json  views.json
.github/workflows/: ci.yml  gh-traffic-stats.yml
dispatcher/: README.md  config.yaml.example  install-linux.sh  install-macos.sh  install-windows.ps1  pyproject.toml
dispatcher/install/: voice-dispatcher.plist  voice-dispatcher.service  voice-dispatcher.xml
dispatcher/tests/: test_audio.py  test_cli_tls.py  test_core.py  test_ws_adapter.py  test_ws_integration.py
dispatcher/voice_dispatcher/: __init__.py  __main__.py  cli.py  tls.py
dispatcher/voice_dispatcher/adapters/: websocket.py
dispatcher/voice_dispatcher/audio/: pipeline.py
dispatcher/voice_dispatcher/core/: bus.py  handlers.py  models.py  session.py
plugin/voice/: .mcp.json  README.md  bootstrap.sh  package-lock.json  package.json  run.sh  server.ts  tsconfig.json
plugin/voice/.claude-plugin/: plugin.json
plugin/voice/skills/configure/: SKILL.md
plugin/voice/skills/status/: SKILL.md
plugin/voice/tests/: protocol.test.ts
